@@ -4,24 +4,32 @@
 ( function ( mw, $ ) {
 
 	$( function () {
-		var editBox, scrollTop, $editForm;
+		var $editForm = $( '#editform' ),
+			$editBox = $editForm.find( '#wpTextbox1' ),
+			$scrollTop = $editForm.find( '#wpScrolltop' );
 
 		// Make sure edit summary does not exceed byte limit
 		$( '#wpSummary' ).byteLimit( 255 );
 
 		// Restore the edit box scroll state following a preview operation,
 		// and set up a form submission handler to remember this state.
-		editBox = document.getElementById( 'wpTextbox1' );
-		scrollTop = document.getElementById( 'wpScrolltop' );
-		$editForm = $( '#editform' );
-		if ( $editForm.length && editBox && scrollTop ) {
-			if ( scrollTop.value ) {
-				editBox.scrollTop = scrollTop.value;
-			}
-			$editForm.submit( function () {
-				scrollTop.value = editBox.scrollTop;
-			} );
+		if ( $scrollTop.val() ) {
+			$editBox.scrollTop( $scrollTop.val() );
 		}
+
+		$editForm.submit( function () {
+			$scrollTop.val( $editBox.scrollTop() );
+		} );
+
+		/**
+		 * Fired when wiki content has been modified by the user
+		 *
+		 * @event wikipage_content_change
+		 * @member mw.hook
+		 * @param {jQuery} $content The most appropriate element containing the content,
+		 *   such as #wpTextbox1 (on the default wikitext edit interface).
+		 */
+		$editBox.change( mw.hook( 'wikipage.content.change' ).fire );
 	} );
 
 }( mediaWiki, jQuery ) );
